2022-10-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/fallbacks.tmac: Define fallback characters for many code
	points from the Unicode General Punctuation Block.  This is to
	ease migration from other documentation formats; in many cases
	there are more idiomatic *roff ways of getting results that
	typeset better and are amenable to fine tuning.  For instance,
	Unicode defines spaces and dashes of various discrete widths;
	when typesetting with *roff, you can have a space or dash (among
	other things) of any length achievable by the output device.
	* tmac/ps.tmac: Migrate non-breaking hyphen fallback character
	definition from here to the foregoing.

	Fixes <https://savannah.gnu.org/?58930>.  Thanks to Dave Kemper
	for the report and discussion.

2022-10-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/an.tmac:
	* tmac/s.tmac: Escape newlines when opening conditional blocks.

	Fixes <https://savannah.gnu.org/?63197>.  Thanks to Bjarni Ingi
	Gislason for the report and Dave Kemper for the quick fix.

2022-10-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grodvi/dvi.cpp (usage):
	* src/devices/grohtml/post-html.cpp (usage):
	* src/devices/grolbp/lbp.cpp (usage):
	* src/devices/grolj4/lj4.cpp (usage):
	* src/devices/grops/ps.cpp (usage):
	* src/devices/grotty/tty.cpp (usage):
	* src/devices/xditview/xditview.cpp (usage):
	* src/preproc/eqn/main.cpp (usage):
	* src/preproc/grn/main.cpp (usage):
	* src/preproc/html/pre-html.cpp (usage):
	* src/preproc/pic/main.cpp (usage):
	* src/preproc/preconv/preconv.cpp (usage):
	* src/preproc/refer/refer.cpp (usage):
	* src/preproc/soelim/soelim.cpp (usage):
	* src/preproc/tbl/main.cpp (usage):
	* src/roff/groff/groff.cpp (synopsis, help):
	* src/roff/nroff/nroff.sh:
	* src/roff/troff/input.cpp (usage):
	* src/utils/addftinfo/addftinfo.cpp (usage):
	* src/utils/hpftodit/hpftodit.cpp (usage):
	* src/utils/indxbib/indxbib.cpp (usage):
	* src/utils/lkbib/lkbib.cpp (usage):